fix: using StandardCharsets instead of string utf-8